PMforce/src/objects/Proposal__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Delivered_On__c</fullName>
        <label>Proposal Delivered On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Requested_By__c</fullName>
        <label>Proposal Requested By</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alan Acton</fullName>
                </value>
                <value>
                    <fullName>Amol Gavai</fullName>
                </value>
                <value>
                    <fullName>Devdatta Kumbhare</fullName>
                </value>
                <value>
                    <fullName>Himanshu Chate</fullName>
                </value>
                <value>
                    <fullName>Jason Young</fullName>
                </value>
                <value>
                    <fullName>Kishore Kulkarni</fullName>
                </value>
                <value>
                    <fullName>Orvin Moore</fullName>
                </value>
                <value>
                    <fullName>Soumil Chitnis</fullName>
                </value>
                <value>
                    <fullName>Sumanta Mukherjee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Requested_On__c</fullName>
        <label>Proposal Requested On</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>On-hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Spent_Hours__c</fullName>
        <description>Update the time spent on proposal.</description>
        <label>Time Spent (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Proposal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Account__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Proposal_Requested_By__c</columns>
        <columns>Proposal_Requested_On__c</columns>
        <columns>Proposal_Delivered_On__c</columns>
        <columns>Stage__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR{0000000}</displayFormat>
        <label>Proposal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>